# CG-exercises

./: README.md
P0/code/: CMakeLists.txt
P01/: main.cpp
P02/: main.cpp
P03/: main.cpp
